feat: remove order item from cart
